@@ -296,6 +296,9 @@ not dereferencing it) while handling lookbehind assertions.
 87. Failure to get memory for the match data in regcomp() is now given as a 
 regcomp() error instead of waiting for regexec() to pick it up.
 
+88. In pcre2_substitute(), ensure that CRLF is not split when it is a valid 
+newline sequence.
+
 
 Version 10.20 30-June-2015
 --------------------------
